更新します

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>yokkiのミラーサイト#1＜はてなブログ＞</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="icon" href="img/logo-icon.svg">
   <!-- <svg class = icon1 xlmns='img/logo-icon.svg' fill='#fff' width="100">
     <path d='M0 64 L32 32 L0 0 Z' />
   </svg> -->
@@ -14,7 +16,7 @@
   <header>
     <div class="header-container">
       <div class="top-logo">
-        <a href="file:///Users/kamitsuruyoshiki/Desktop/プログラミング練習/4_ミラーサイト%231/index.html">
+        <a href="https://hatenablog.com/">
           <img src="img/header_logo.png" width="250px" height="80px">
         </a>
       </div>
@@ -57,7 +59,7 @@
   <div class="header-guide">
     <div class="home-guide">
       <div class="icon2">
-        <a href="file:///Users/kamitsuruyoshiki/Desktop/プログラミング練習/4_ミラーサイト%231/index.html">
+        <a href="https://hatenablog.com/">
           <img src="img/logo-icon.svg" alt="" width="70" height="75">
          </a> 
       </div>
@@ -755,7 +757,7 @@
       どうぞご利用ください。
     </p>
 
-    <a href="file:///Users/kamitsuruyoshiki/Desktop/プログラミング練習/4_ミラーサイト%231/index.html"; class="btn" data-gtm-action-name="about_hatenablog">はてなブログとは</a>
+    <a href="https://hatenablog.com/"; class="btn" data-gtm-action-name="about_hatenablog">はてなブログとは</a>
   </div>  
 
 
@@ -800,7 +802,7 @@
   <div class="footer-tab">
     <div class="fotter-tab-1">
       <div class="float_tag">
-        <a href="file:///Users/kamitsuruyoshiki/Desktop/プログラミング練習/4_ミラーサイト%231/index.html">
+        <a href="https://hatenablog.com/">
           <img src="img/header_logo.png" alt="hatenablog" width="250px" height="70px">
         </a>
       </div>
@@ -808,12 +810,12 @@
 
     <div class="fotter-tab-2">
       <div class="float_tag">
-        <a href="file:///Users/kamitsuruyoshiki/Desktop/プログラミング練習/4_ミラーサイト%231/index.html">
+        <a href="https://hatenablog.com/">
           <img src="img/Twitterのアイコン素材 2.png" alt="twitterページ" width="50px" height="50px">
         </a>
       </div>
       <div class="float_tag">
-        <a href="file:///Users/kamitsuruyoshiki/Desktop/プログラミング練習/4_ミラーサイト%231/index.html">
+        <a href="https://hatenablog.com/">
           <img src="img/FACEBOOKのアイコン素材 3.png" alt="facebookページ" width="50px" height="50px">
         </a>
       </div>
@@ -821,12 +823,12 @@
 
     <div class="fotter-tab-3">
       <div class="float_tag">
-        <a href="file:///Users/kamitsuruyoshiki/Desktop/プログラミング練習/4_ミラーサイト%231/index.html">
+        <a href="https://hatenablog.com/">
           <img src="img/logo-icon.svg" alt="ミラーサイト#3">
         </a>
       </div>
       <div class="float_tag">
-        <a href="file:///Users/kamitsuruyoshiki/Desktop/プログラミング練習/4_ミラーサイト%231/index.html">
+        <a href="https://hatenablog.com/">
           <img src="img/logo-icon.svg" alt="ミラーサイト#4">
         </a>
       </div>
